# fms

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  file_associations.rs  indexer.rs  main.rs  search.rs  tag_db.rs
src/ui/: file_list.rs  file_tree.rs  folder_view.rs  mod.rs  tag_view.rs  theme.rs
