[package]
name = "fms"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2.4"
xattr = "1.3"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
plist = "1.0"
sysinfo = "0.30"

[package.metadata.bundle]
name = "FMS - Find My Shiet"
identifier = "com.fariaduarte.fms"
icon = []
version = "0.1.0"
copyright = "Copyright (c) 2026 You"
short_description = "Fast file manager / searcher"
